crates/spite-parser/tests/snapshots/tagged_templates__syntax_and_diagnostic_snapshots-2.snap
---
source: crates/spite-parser/tests/tagged_templates.rs
expression: parse_script(source).unwrap_err()
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 0,
        end: 6,
    },
    message: "invalid assignment target",
}
