crates/spite-parser/tests/snapshots/tagged_templates__syntax_and_diagnostic_snapshots-5.snap
---
source: crates/spite-parser/tests/tagged_templates.rs
expression: parse_script(source).unwrap_err()
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 3,
        end: 6,
    },
    message: "tagged template requires a left-hand-side expression",
}
